--- a/playbook.yml
+++ b/playbook.yml
@@ -13,9 +13,10 @@
     wildfly:
       home: "{{ workdir }}/wildfly-{{ wfly_version }}/"
       user: wildfly
-      bind_addr: localhost
-      base_config: standalone.xml
+      bind_addr: ansible-mw-demo
+      base_config: standalone-ha.xml
       config_name_prefix: wfly-
+      basedir_prefix: /var/run/wfly-
       min_mem: 64m
       max_mem: 512m
       metaspace_size: 96m
@@ -42,80 +43,38 @@
           - "{{ jvm_package | default('java-1.8.0-openjdk-devel') }}"
         state: present
 
-    - name: "Ensures workdir '{{ workdir }}' is created"
-      file:
-        path: "{{ workdir }}"
-        state: directory
+    - name: "Install Widfly"
+      include_tasks: tasks/install-wildfly.yml
 
-    - name: "Ensure Wildfly user {{ wildfly.user }} exists"
-      user:
-        name: "{{ wildfly.user }}"
-        comment: "User to run Wildfly"
-
-    - name: "Download and unzip Wildfly zipfile from {{ wfly_download_url }}"
-      unarchive:
-        src: "{{ wfly_download_url }}"
-        dest: "{{ workdir }}"
-        owner: "{{ wildfly.user }}"
-        group: "{{ wildfly.user }}"
-        remote_src: yes
-        creates: "{{ wildfly.home }}"
-
-    - name: "Deploy Wildfy configuration"
-      copy:
-        src: "{{ wildfly.home }}/standalone/configuration/standalone.xml"
-        dest: "{{ wildfly.home }}/standalone/configuration/wfly-{{ item }}.xml"
-        group: "{{ wildfly.user }}"
-        owner: "{{ wildfly.user }}"
+    - name: "Set up for all Wildfly instances"
+      include_tasks: tasks/set-up-wildfy-service.yml
       loop:
         - 1
         - 2
         - 3
-
-    - name: "Deploy Systemd configuration for Wildfly service"
-      template:
-        src: templates/eap7-standalone.service.j2
-        dest: "/usr/lib/systemd/system/wfly-{{ item }}.service"
-        group: root
-        owner: root
-      loop:
-       - 1
-       - 2
-       - 3
-
-    - name: "Perform daemon-reload to ensure the changes are picked up"
-      systemd:
-        daemon_reload: yes
-
-    - name: "Start Wildfly Server"
-      service:
-        name: wfly
-        state: started
-        enabled: yes
-
-  tasks:
-    - name: "Download a demo app to deploy"
-      get_url:
-        url: "{{ app_url }}"
-        dest: "{{ app }}"
-
-    - jcliff:
-        wfly_home: "{{ wildfly.home }}"
-        subsystems:
-          - system_props:
-              - name: jcliff.enabled
-                value: 'enabled.plus'
-          - deployments:
-              - artifact_id: simple-webapp-v1.war
-                name: simple-webapp
-                path: /tmp/simple-webapp.war
-          - datasources:
-              - name: ExampleDS2
-                use_java_context: 'true'
-                jndi_name: java:jboss/datasources/ExampleDS2
-                connection_url: "jdbc:h2:mem:test2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"
-                driver_name: h2
-
-    - name: "Restart Wildfly"
-      command: "{{ jboss_home }}/bin/jboss-cli.sh --connect --command=':reload'"
-      register: cli_result
+#  tasks:
+#    - name: "Download a demo app to deploy"
+#      get_url:
+#        url: "{{ app_url }}"
+#        dest: "{{ app }}"
+#
+#    - jcliff:
+#        wfly_home: "{{ wildfly.home }}"
+#        subsystems:
+#          - system_props:
+#              - name: jcliff.enabled
+#                value: 'enabled.plus'
+#          - deployments:
+#              - artifact_id: simple-webapp-v1.war
+#                name: simple-webapp
+#                path: /tmp/simple-webapp.war
+#          - datasources:
+#              - name: ExampleDS2
+#                use_java_context: 'true'
+#                jndi_name: java:jboss/datasources/ExampleDS2
+#                connection_url: "jdbc:h2:mem:test2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"
+#                driver_name: h2
+#
+#    - name: "Restart Wildfly"
+#      command: "{{ jboss_home }}/bin/jboss-cli.sh --connect --command=':reload'"
+#      register: cli_result
