Add sample.war to trigger clustering

--- a/playbook.yml
+++ b/playbook.yml
@@ -2,8 +2,8 @@
 - hosts: localhost
   gather_facts: false
   vars:
-    app_url: http://people.redhat.com/~rpelisse/simple-webapp.war
-    app: /tmp/simple-webapp.war
+    app_url: https://tomcat.apache.org/tomcat-7.0-doc/appdev/sample/sample.war
+    app: /tmp/sample.war
     wfly_version: 19.0.0.Final
     workdir: /opt/wildfly/
     wfly_zipfile: "wildfly-{{ wfly_version }}.zip"
@@ -13,7 +13,7 @@
     wildfly:
       home: "{{ workdir }}/wildfly-{{ wfly_version }}/"
       user: wildfly
-      bind_addr: ansible-mw-demo
+      bind_addr: localhost
       base_config: standalone-ha.xml
       config_name_prefix: wfly-
       basedir_prefix: /var/run/wfly-
@@ -52,29 +52,10 @@
         - 1
         - 2
         - 3
-#  tasks:
-#    - name: "Download a demo app to deploy"
-#      get_url:
-#        url: "{{ app_url }}"
-#        dest: "{{ app }}"
-#
-#    - jcliff:
-#        wfly_home: "{{ wildfly.home }}"
-#        subsystems:
-#          - system_props:
-#              - name: jcliff.enabled
-#                value: 'enabled.plus'
-#          - deployments:
-#              - artifact_id: simple-webapp-v1.war
-#                name: simple-webapp
-#                path: /tmp/simple-webapp.war
-#          - datasources:
-#              - name: ExampleDS2
-#                use_java_context: 'true'
-#                jndi_name: java:jboss/datasources/ExampleDS2
-#                connection_url: "jdbc:h2:mem:test2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"
-#                driver_name: h2
-#
-#    - name: "Restart Wildfly"
-#      command: "{{ jboss_home }}/bin/jboss-cli.sh --connect --command=':reload'"
-#      register: cli_result
+  tasks:
+    - name: "Deploy app in cluster"
+      include_tasks: tasks/fine-tuned-wildfly.yml
+      loop:
+        - 1
+        - 2
+        - 3
