--- a/tasks/fine-tuned-wildfly.yml
+++ b/tasks/fine-tuned-wildfly.yml
@@ -5,6 +5,7 @@
 
 - jcliff:
     wfly_home: "{{ wildfly.home }}"
+    management_port: "{{ 9990 + ((item - 1) * 100) }}"
     subsystems:
       - system_props:
           - name: jcliff.enabled
