--- a/tasks/set-up-wildfy-service.yml
+++ b/tasks/set-up-wildfy-service.yml
@@ -20,6 +20,7 @@
     dest: "{{ wildfly.home }}/standalone/configuration/{{ wildfly.config_name_prefix }}{{ item }}.xml"
     group: "{{ wildfly.user }}"
     owner: "{{ wildfly.user }}"
+    force: no
 
 - name: "Deploy Systemd configuration for Wildfly service"
   template:
