--- a/tasks/fine-tuned-wildfly.yml
+++ b/tasks/fine-tuned-wildfly.yml
@@ -3,7 +3,8 @@
     url: "{{ app_url }}"
     dest: "{{ app }}"
 
-- jcliff:
+- name: "Fine tune Wildfly configuration"
+  jcliff:
     wfly_home: "{{ wildfly.home }}"
     management_port: "{{ 9990 + ((item - 1) * 100) }}"
     subsystems:
@@ -19,9 +20,11 @@
             driver_module_name: org.postgresql
             driver_class_name: org.postgresql.Driver
             driver_xa_datasource_class_name: org.postgresql.xa.PGXADataSourcer
-#          - datasources:
-#              - name: ExampleDS2
-#                use_java_context: 'true'
-#                jndi_name: java:jboss/datasources/ExampleDS2
-#                connection_url: "jdbc:h2:mem:test2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"
-#                driver_name: h2
+      - datasources:
+          - name: "{{ wildfly.config_name_prefix }}db"
+            use_java_context: 'true'
+            jndi_name: "java:jboss/datasources/{{ wildfly.config_name_prefix }}db"
+            connection_url: "jdbc:postgresql://localhost:5432/{{ wildfly.config_name_prefix }}db"
+            driver_name: postgresql
+            user_name: "{{ wildfly.user }}"
+            password: "{{ wildfly.user }}"
