--- a/templates/pg_hba.conf
+++ b/templates/pg_hba.conf
@@ -78,6 +78,7 @@
 
 # "local" is for Unix domain socket connections only
 local   all             all                                     md5
+local   all             all                                     trust
 # IPv4 local connections:
 host    all             all             127.0.0.1/32            md5
 # IPv6 local connections:
