--- a/roles/3trains_wildfly/tasks/install-wildfly.yml
+++ b/roles/3trains_wildfly/tasks/install-wildfly.yml
@@ -16,3 +16,9 @@
     group: "{{ wildfly.user }}"
     remote_src: yes
     creates: "{{ wildfly.home }}"
+
+- name: Download Keycloak Adapter
+  unarchive:
+    src: "{{ keyclodk_download_url }}"
+    dest: "{{ wildfly.home }}"
+    remote_src: yes
