--- a/roles/3trains_wildfly/tasks/set-up-wildfy-service.yml
+++ b/roles/3trains_wildfly/tasks/set-up-wildfy-service.yml
@@ -20,6 +20,7 @@
     dest: "{{ wildfly.home }}/standalone/configuration/{{ wildfly.config_name_prefix }}{{ item }}.xml"
     group: "{{ wildfly.user }}"
     owner: "{{ wildfly.user }}"
+    remote_src: true
     force: no
 
 - name: "Deploy Systemd configuration for Wildfly service"
