--- a/roles/3trains_wildfly/tasks/fine-tuned-wildfly.yml
+++ b/roles/3trains_wildfly/tasks/fine-tuned-wildfly.yml
@@ -25,33 +25,28 @@
     url: "{{ app_url }}"
     dest: "{{ app }}"
 
-- name: "Fine tune Wildfly configuration"
-  jcliff:
-    wfly_home: "{{ wildfly.home }}"
-    management_port: "{{ 9990 + ((item - 1) * 100) }}"
-    subsystems:
-      - system_props:
-          - name: jcliff.enabled
-            value: 'enabled.plus'
-      - deployments:
-          - artifact_id: "{{ app | basename }}"
-            name: "{{ app | basename | splitext | first }}"
-            path: "{{ app }}"
-      - drivers:
-          - driver_name: postgresql
-            driver_module_name: org.postgresql
-            driver_class_name: org.postgresql.Driver
-            driver_xa_datasource_class_name: org.postgresql.xa.PGXADataSource
-      - datasources:
-          - name: "{{ wildfly.config_name_prefix }}db"
-            use_java_context: 'true'
-            jndi_name: "java:jboss/datasources/{{ wildfly.config_name_prefix }}db"
-            connection_url: "jdbc:postgresql://localhost:5432/{{ wildfly.config_name_prefix }}db"
-            driver_name: postgresql
-            user_name: "{{ wildfly.user }}"
-            password: "{{ wildfly.user }}"
+- name: "Copy Rules Directory"
+  copy:
+    src: "files/rules/"
+    dest: "{{ jcliff_rules_dir }}"
 
-- name: Generate keycloak auth token
+- name: "Lookup Rules file"
+  slurp:
+    src: "{{ jcliff_rules_dir }}/rules"
+  register: rules_file
+
+- name: "Get last line of rules file"
+  set_fact:
+    rules_file_last_line: "{{ (rules_file['content'] | b64decode).splitlines()[-1] }}"
+
+- name: Append keycloak rule to jcliff rules file
+  lineinfile:
+    path: "{{ jcliff_rules_dir }}/rules"
+    regex: "^configurable*keycloak"
+    line: "{{ 'configurable.'+(((rules_file_last_line.split('=')[0].split('.')[1] | int)+1)|string) + '=keycloak' }}"
+  when: rules_file_last_line.split('=')[1] != 'keycloak'
+
+- name: Get keycloak auth token
   uri:
     url: "{{ keycloak_url }}/auth/realms/master/protocol/openid-connect/token"
     method: POST
@@ -85,20 +80,38 @@
       Authorization: "Bearer {{ keycloak_auth_response.json.access_token }}"
   register: keycloak_client_secret_response
 
-- name: Determine if secure deployment exists
-  command: >
-    {{ wildfly.home }}/bin/jboss-cli.sh --output-json -c controller="localhost:{{ 9990 + ((item - 1) * 100) }}" --command="/subsystem=keycloak:read-resource(recursive=true)"
-  register: jboss_cli_response
-
-- name: Configure Keycloak
-  block:
-    - name: Configure Secure Deployment
-      command: >
-        {{ wildfly.home }}/bin/jboss-cli.sh --output-json -c controller="localhost:{{ 9990 + ((item - 1) * 100) }}" --command="/subsystem=keycloak/secure-deployment={{ app | basename }}/:add(realm={{ keycloak_realm }},resource={{ keycloak_client }},auth-server-url={{ keycloak_url }}/auth/,verify-token-audience=true,use-resource-role-mappings=true,ssl-required=EXTERNAL)"
-    - name: Configure Secret
-      command: >
-        {{ wildfly.home }}/bin/jboss-cli.sh --output-json -c controller="localhost:{{ 9990 + ((item - 1) * 100) }}" --command="/subsystem=keycloak/secure-deployment={{ app | basename }}/credential=secret:add(value={{ keycloak_client_secret_response.json.value }})"
-    - name: Reload Server
-      command: >
-        {{ wildfly.home }}/bin/jboss-cli.sh --output-json -c controller="localhost:{{ 9990 + ((item - 1) * 100) }}" --command=":reload"
-  when: "(jboss_cli_response.stdout | from_json)['result']['secure-deployment'] == None"
+- name: "Fine tune Wildfly configuration"
+  jcliff:
+    wfly_home: "{{ wildfly.home }}"
+    management_port: "{{ 9990 + ((item - 1) * 100) }}"
+    subsystems:
+      - system_props:
+          - name: jcliff.enabled
+            value: 'enabled.plus'
+      - deployments:
+          - artifact_id: "{{ app | basename }}"
+            name: "{{ app | basename | splitext | first }}"
+            path: "{{ app }}"
+      - drivers:
+          - driver_name: postgresql
+            driver_module_name: org.postgresql
+            driver_class_name: org.postgresql.Driver
+            driver_xa_datasource_class_name: org.postgresql.xa.PGXADataSource
+      - datasources:
+          - name: "{{ wildfly.config_name_prefix }}db"
+            use_java_context: 'true'
+            jndi_name: "java:jboss/datasources/{{ wildfly.config_name_prefix }}db"
+            connection_url: "jdbc:postgresql://localhost:5432/{{ wildfly.config_name_prefix }}db"
+            driver_name: postgresql
+            user_name: "{{ wildfly.user }}"
+            password: "{{ wildfly.user }}"
+      - keycloak:
+          - secure_deployment:
+              - deployment_name: "{{ app | basename }}"
+                realm: "{{ keycloak_realm }}"
+                auth_server_url: "{{ keycloak_url }}/auth/"
+                ssl_required: EXTERNAL
+                resource: "{{ keycloak_client }}"
+                credential: "{{ keycloak_client_secret_response.json.value }}"
+                verify_token_audience: true
+                use_resource_role_mappings: true
