--- a/roles/3trains_wildfly/tasks/prereqs.yml
+++ b/roles/3trains_wildfly/tasks/prereqs.yml
@@ -13,3 +13,24 @@
       - initscripts
       - "{{ jvm_package | default('java-1.8.0-openjdk-devel') }}"
     state: present
+
+- name: "Copy Rules Directory"
+  copy:
+    src: "files/rules/"
+    dest: "{{ jcliff_rules_dir }}"
+
+- name: "Lookup Rules file"
+  slurp:
+    src: "{{ jcliff_rules_dir }}/rules"
+  register: rules_file
+
+- name: "Get last line of rules file"
+  set_fact:
+    rules_file_last_line: "{{ (rules_file['content'] | b64decode).splitlines()[-1] }}"
+
+- name: Append keycloak rule to jcliff rules file
+  lineinfile:
+    path: "{{ jcliff_rules_dir }}/rules"
+    regex: "^configurable*keycloak"
+    line: "{{ 'configurable.'+(((rules_file_last_line.split('=')[0].split('.')[1] | int)+1)|string) + '=keycloak' }}"
+  when: rules_file_last_line.split('=')[1] != 'keycloak'
