--- a/roles/3trains_wildfly/tasks/prereqs.yml
+++ b/roles/3trains_wildfly/tasks/prereqs.yml
@@ -1,18 +1,20 @@
 ---
 
+- set_fact:
+    packages_list:
+    - zip
+    - unzip
+    - gcc
+    - redhat-rpm-config
+    - procps-ng
+    - python3-pip
+    - python3-devel
+    - initscripts
+    - "{{ jvm_package | default('java-1.8.0-openjdk-devel') }}"
+
+
 - name: "Ensures required packages are installed"
-  yum:
-    name:
-      - zip
-      - unzip
-      - gcc
-      - redhat-rpm-config
-      - procps-ng
-      - python3-pip
-      - python3-devel
-      - initscripts
-      - "{{ jvm_package | default('java-1.8.0-openjdk-devel') }}"
-    state: present
+  include_tasks: install-missing-packages.yml
 
 - name: "Copy Rules Directory"
   copy:
