--- a/roles/3trains_wildfly/tasks/fine-tuned-wildfly.yml
+++ b/roles/3trains_wildfly/tasks/fine-tuned-wildfly.yml
@@ -1,65 +1,10 @@
 ---
 
-- name: Set application detail
-  set_fact:
-    app_detail: "{{ apps | selectattr('version','equalto', sample_app_version) | list | first }}"
+- name: "Enable Keycloak if requested"
+  include_tasks: keycloak.yml
 
-- name: Set Application Destination Directory
-  set_fact:
-    app_dest: "{{ app_dir + '/' + app_detail.name + '-' + app_detail.version + '.' + app_detail.extension }}"
-
-- name: "Download a demo app to deploy"
-  get_url:
-    url: "{{ app_detail.url }}"
-    dest: "{{ app_dest }}"
-
-- name: Get keycloak auth token
-  uri:
-    url: "{{ keycloak_url }}/auth/realms/master/protocol/openid-connect/token"
-    method: POST
-    body: "client_id={{ keycloak_auth_client }}&username={{ keycloak_admin_user }}&password={{ keycloak_admin_password }}&grant_type=password"
-    validate_certs: no
-  register: keycloak_auth_response
-  until: keycloak_auth_response.status == 200
-  retries: 5
-  delay: 2
-  run_once: true
-
-- name: "Get Clients"
-  uri:
-    url: "{{ keycloak_url }}/auth/admin/realms/{{ keycloak_realm }}/clients"
-    method: GET
-    status_code:
-     - 200
-    headers:
-      Accept: "application/json"
-      Authorization: "Bearer {{ keycloak_auth_response.json.access_token }}"
-  register: keycloak_client_response
-
-- name: "Get Client Secret"
-  uri:
-    url: "{{ keycloak_url }}/auth/admin/realms/{{ keycloak_realm }}/clients/{{ (keycloak_client_response.json | selectattr('clientId', 'equalto', keycloak_client) | list | first).id }}/client-secret"
-    method: GET
-    status_code:
-     - 200
-    headers:
-      Accept: "application/json"
-      Authorization: "Bearer {{ keycloak_auth_response.json.access_token }}"
-  register: keycloak_client_secret_response
-
-- name: "Check if HTTPS has been enabled"
-  command: >
-    {{ wildfly.home }}/bin/jboss-cli.sh --output-json -c --controller="localhost:{{ 9990 + ((item - 1) * 100) }}" --command="security enable-ssl-http-server"
-  args:
-    chdir: "{{ wildfly.home }}"
-  ignore_errors: true
-  register: https_enabled
-  changed_when: https_enabled.stdout != "SSL is already enabled for default-server"
-
-- name: "Enable HTTPS"
-  command: >
-    {{ wildfly.home }}/bin/jboss-cli.sh -c --controller="localhost:{{ 9990 + ((item - 1) * 100) }}" --command="security enable-ssl-http-server --key-store-path=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.252.b09-0.fc31.x86_64/jre/lib/security/cacerts --key-store-password=changeit"
-  when: https_enabled.stdout != "SSL is already enabled for default-server"
+- name: "Enable HTTS if requested"
+  include_tasks: https.yml
 
 - name: "Fine tune Wildfly configuration"
   jcliff:
@@ -96,3 +41,4 @@
                 credential: "{{ keycloak_client_secret_response.json.value }}"
                 verify_token_audience: true
                 use_resource_role_mappings: true
+  when: wildfly.enable.subsys_config
