Refactor Postgres set into a separate role
Also place the fastpackages install into a
separate role

--- a/roles/3trains_fastpackages/tasks/main.yml
+++ b/roles/3trains_fastpackages/tasks/main.yml
@@ -5,6 +5,7 @@
 - block:
   - set_fact:
       packages_to_install: ""
+
   - name: "Include"
     include_tasks: tasks/build-packages-list-to-install.yml
     loop: "{{ packages_list }}"
@@ -12,7 +13,7 @@
       loop_var: package_name
 
   - name: "Test if any packages are left to install: {{ packages_to_install }}"
-    debug:
-      msg: "{{ packages_to_install }}"
-      #state: latest
+    yum:
+      name: "{{ packages_to_install }}"
+      state: latest
     when: packages_to_install != ""
