--- a/roles/3trains_wildfly/defaults/main.yml
+++ b/roles/3trains_wildfly/defaults/main.yml
@@ -22,6 +22,7 @@ wildfly:
   home: "{{ workdir }}/wildfly-{{ wfly_version }}/"
   user: wildfly
   bind_addr: "{{ wildfly_bind_addr | default('localhost') }}"
+  port_range_offset: 0
   base_config: standalone-ha.xml
   config_name_prefix: wfly-
   basedir_prefix: /var/run/wfly-
