--- a/roles/3trains_keycloak/tasks/prereqs.yml
+++ b/roles/3trains_keycloak/tasks/prereqs.yml
@@ -1,15 +1,10 @@
 ---
-
-- name: upgrade all packages
-  become: true
-  yum:
-    name: '*'
-    state: latest
-
-- name: Install packages
-  become: true
-  package:
-    name: "{{ item }}"
-  loop:
-    - java-1.8.0-openjdk
+- set_fact:
+    packages_list:
+    - "{{ jvm_package | default('java-1.8.0-openjdk-devel') }}"
     - unzip
+
+- name: "Ensures required packages are installed"
+  include_role:
+    name: 3trains_fastpackages
+
