Reverting pip changes

--- a/roles/3trains_fastpackages/tasks/main.yml
+++ b/roles/3trains_fastpackages/tasks/main.yml
@@ -13,6 +13,7 @@
       loop_var: package_name
 
   - name: "Test if any packages are left to install: {{ packages_to_install }}"
+    become: yes
     yum:
       name: "{{ packages_to_install }}"
       state: latest
