Fix the demo project

--- a/playbooks/wildfly-app-mgmt.yaml
+++ b/playbooks/wildfly-app-mgmt.yaml
@@ -3,10 +3,12 @@
   hosts: wildfly
   collections:
     - wildfly.jcliff
+  roles:
+    - jcliff
   tasks:
-    - name: JCliff
-      include_role:
-        name: jcliff
+    # - name: JCliff
+    #   include_role:
+    #     name: jcliff
     - name: Wildfly Role
       include_role:
         name: 3trains_wildfly
